# openenv-hackathon

./: Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: tickets.py
server/: app.py
tasks/: task1.py  task2.py  task3.py  task4.py
