[project]
name = "customer-support-ticket-router"
version = "1.0.0"
description = "An OpenEnv environment for routing customer support tickets"
requires-python = ">=3.11"
dependencies = [
    "openenv>=0.1.13",
    "openai>=2.30.0",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "pydantic>=2.12.5",
    "numpy>=2.4.3",
    "python-dotenv>=1.1.0",
]

[project.scripts]
server = "server.app:app"